For the current development, the user can 
see: https://github.com/dmpe/urlshorteneR

###
Februar 2016   - Update packages to their latest versions
               - Fix this: https://github.com/dmpe/urlshorteneR/issues/9

November 2015  - First release of a new package 'urlshorteneR', which has been developed with Andrew Collier. 
               - The archieved version of RBitly can be found here: https://cran.r-project.org/src/contrib/Archive/RBitly
               - All functions have been renamed in order to make them easier to differentiate and use in the future
               - Deleted Ow.ly and replaced it with is.gd
               
September 2015 - Smaller tweaks, which should not impact any functionality of the Bit.ly
               - Bring up-to-date with R releases
               - Added (a very) experimental support of Ow.ly (owned by Hootsuite.com). Please (!) 
               report bugs to the maintainers (see above).
               - Added a (less experimental) support of goo.gl (owned by Google.com). 
               - This is also the last release before RBitly will get achieved. Please replace with 
               devtools:install_github('dmpe/urlshorteneR') 
               - The former github URL was https://github.com/dmpe/rbitly
           
July 2015      - Initial CRAN Release.
               - Majority of methods are implemented and ready to use.