@@ -2,8 +2,9 @@ For the current development, the user can
 see: https://github.com/dmpe/urlshorteneR
 
 ###
-Februar 2016   - Update packages to their latest versions
+February 2016  - Update packages to their latest versions
                - Fix this: https://github.com/dmpe/urlshorteneR/issues/9
+               - Add a message to display when packages has been loaded
 
 November 2015  - First release of a new package 'urlshorteneR', which has been developed with Andrew Collier. 
                - The archieved version of RBitly can be found here: https://cran.r-project.org/src/contrib/Archive/RBitly
